// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu should render correctly items in groups 1`] = `
<div
  class="container container direction-vertical"
  data-qa="Menu"
>
  <div
    class="itemGroup container direction-vertical"
    data-qa="Space"
  >
    <div
      class="itemBase label container direction-horizontal align-center"
      data-qa="Space"
      style="column-gap: 4px; row-gap: 4px;"
    >
      Group 1 label
    </div>
    <div
      class="itemBase item container direction-horizontal align-center"
      data-qa="Space"
      style="column-gap: 12px; row-gap: 12px;"
    >
      <div
        class="container direction-vertical align-start"
        data-qa="Space"
      >
        <div
          class="text"
        >
          Item 1
        </div>
      </div>
    </div>
    <div
      class="itemBase item container direction-horizontal align-center"
      data-qa="Space"
      style="column-gap: 12px; row-gap: 12px;"
    >
      <div
        class="container direction-vertical align-start"
        data-qa="Space"
      >
        <div
          class="text"
        >
          Item 2
        </div>
      </div>
    </div>
  </div>
  <div
    class="itemGroup container direction-vertical"
    data-qa="Space"
  >
    <div
      class="itemBase label container direction-horizontal align-center"
      data-qa="Space"
      style="column-gap: 4px; row-gap: 4px;"
    >
      Group 2 label
    </div>
    <div
      class="itemBase item container direction-horizontal align-center"
      data-qa="Space"
      style="column-gap: 12px; row-gap: 12px;"
    >
      <div
        class="container direction-vertical align-start"
        data-qa="Space"
      >
        <div
          class="text"
        >
          Item 3
        </div>
      </div>
    </div>
    <div
      class="itemBase item container direction-horizontal align-center"
      data-qa="Space"
      style="column-gap: 12px; row-gap: 12px;"
    >
      <div
        class="container direction-vertical align-start"
        data-qa="Space"
      >
        <div
          class="text"
        >
          Item 4
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Menu should render correctly items with active prop 1`] = `
<div
  class="container container direction-vertical"
  data-qa="Menu"
>
  <div
    class="itemBase item container direction-horizontal align-center"
    data-qa="Space"
    style="column-gap: 12px; row-gap: 12px;"
  >
    <div
      class="container direction-vertical align-start"
      data-qa="Space"
    >
      <div
        class="text"
      >
        Item 1
      </div>
    </div>
  </div>
  <div
    class="itemBase item active container direction-horizontal align-center"
    data-qa="Space"
    style="column-gap: 12px; row-gap: 12px;"
  >
    <div
      class="container direction-vertical align-start"
      data-qa="Space"
    >
      <div
        class="text"
      >
        Item 2
      </div>
    </div>
  </div>
  <div
    class="itemBase item container direction-horizontal align-center"
    data-qa="Space"
    style="column-gap: 12px; row-gap: 12px;"
  >
    <div
      class="container direction-vertical align-start"
      data-qa="Space"
    >
      <div
        class="text"
      >
        Item 3
      </div>
    </div>
  </div>
</div>
`;

exports[`Menu should render correctly items with control prop 1`] = `
<div
  class="container container direction-vertical"
  data-qa="Menu"
>
  <div
    class="itemBase item container direction-horizontal align-center"
    data-qa="Space"
    style="column-gap: 12px; row-gap: 12px;"
  >
    <div
      class="container direction-vertical align-start"
      data-qa="Space"
    >
      <div
        class="text"
      >
        Item 1
      </div>
    </div>
    <div
      class="control"
    >
      <label
        class="container readOnly"
        data-qa="Checkbox"
      >
        <input
          class="input"
          type="checkbox"
          value=""
        />
        <div
          class="control"
        />
      </label>
    </div>
  </div>
  <div
    class="itemBase item container direction-horizontal align-center"
    data-qa="Space"
    style="column-gap: 12px; row-gap: 12px;"
  >
    <div
      class="container direction-vertical align-start"
      data-qa="Space"
    >
      <div
        class="text"
      >
        Item 2
      </div>
    </div>
    <div
      class="control"
    >
      <label
        class="container readOnly"
        data-qa="Checkbox"
      >
        <input
          class="input"
          type="checkbox"
          value=""
        />
        <div
          class="control"
        />
      </label>
    </div>
  </div>
  <div
    class="itemBase item disabled container direction-horizontal align-center"
    data-qa="Space"
    style="column-gap: 12px; row-gap: 12px;"
  >
    <div
      class="container direction-vertical align-start"
      data-qa="Space"
    >
      <div
        class="text"
      >
        Item 3
      </div>
    </div>
    <div
      class="control disabled"
    >
      <label
        class="container disabled readOnly"
        data-qa="Checkbox"
      >
        <input
          class="input"
          disabled=""
          type="checkbox"
          value=""
        />
        <div
          class="control disabled"
        />
      </label>
    </div>
  </div>
</div>
`;

exports[`Menu should render correctly items with description prop 1`] = `
<div
  class="container container direction-vertical"
  data-qa="Menu"
>
  <div
    class="itemBase item container direction-horizontal align-center"
    data-qa="Space"
    style="column-gap: 12px; row-gap: 12px;"
  >
    <div
      class="container direction-vertical align-start"
      data-qa="Space"
    >
      <div
        class="text"
      >
        Item 1
      </div>
      <div
        class="description"
      >
        Description 1
      </div>
    </div>
  </div>
  <div
    class="itemBase item container direction-horizontal align-center"
    data-qa="Space"
    style="column-gap: 12px; row-gap: 12px;"
  >
    <div
      class="container direction-vertical align-start"
      data-qa="Space"
    >
      <div
        class="text"
      >
        Item 2
      </div>
      <div
        class="description"
      >
        Description 2
      </div>
    </div>
  </div>
  <div
    class="itemBase item disabled container direction-horizontal align-center"
    data-qa="Space"
    style="column-gap: 12px; row-gap: 12px;"
  >
    <div
      class="container direction-vertical align-start"
      data-qa="Space"
    >
      <div
        class="text"
      >
        Item 3
      </div>
      <div
        class="description disabled"
      >
        Description 3
      </div>
    </div>
  </div>
</div>
`;

exports[`Menu should render correctly items with disabled prop 1`] = `
<div
  class="container container direction-vertical"
  data-qa="Menu"
>
  <div
    class="itemBase item container direction-horizontal align-center"
    data-qa="Space"
    style="column-gap: 12px; row-gap: 12px;"
  >
    <div
      class="container direction-vertical align-start"
      data-qa="Space"
    >
      <div
        class="text"
      >
        Item 1
      </div>
    </div>
  </div>
  <div
    class="itemBase item disabled container direction-horizontal align-center"
    data-qa="Space"
    style="column-gap: 12px; row-gap: 12px;"
  >
    <div
      class="container direction-vertical align-start"
      data-qa="Space"
    >
      <div
        class="text"
      >
        Item 2
      </div>
    </div>
  </div>
  <div
    class="itemBase item container direction-horizontal align-center"
    data-qa="Space"
    style="column-gap: 12px; row-gap: 12px;"
  >
    <div
      class="container direction-vertical align-start"
      data-qa="Space"
    >
      <div
        class="text"
      >
        Item 3
      </div>
    </div>
  </div>
</div>
`;

exports[`Menu should render correctly items with hint prop 1`] = `
<div
  class="container container direction-vertical"
  data-qa="Menu"
>
  <div
    class="itemBase item container direction-horizontal align-center"
    data-qa="Space"
    style="column-gap: 12px; row-gap: 12px;"
  >
    <div
      class="container direction-vertical align-start"
      data-qa="Space"
    >
      <div
        class="description"
      >
        Hint 1
      </div>
      <div
        class="text"
      >
        Item 1
      </div>
    </div>
  </div>
  <div
    class="itemBase item container direction-horizontal align-center"
    data-qa="Space"
    style="column-gap: 12px; row-gap: 12px;"
  >
    <div
      class="container direction-vertical align-start"
      data-qa="Space"
    >
      <div
        class="description"
      >
        Hint 2
      </div>
      <div
        class="text"
      >
        Item 2
      </div>
    </div>
  </div>
  <div
    class="itemBase item disabled container direction-horizontal align-center"
    data-qa="Space"
    style="column-gap: 12px; row-gap: 12px;"
  >
    <div
      class="container direction-vertical align-start"
      data-qa="Space"
    >
      <div
        class="description disabled"
      >
        Hint 3
      </div>
      <div
        class="text"
      >
        Item 3
      </div>
    </div>
  </div>
</div>
`;

exports[`Menu should render correctly items with icon prop 1`] = `
<div>
  <div
    class="container container direction-vertical"
    data-qa="Menu"
  >
    <div
      class="itemBase item container direction-horizontal align-center"
      data-qa="Space"
      style="column-gap: 12px; row-gap: 12px;"
    >
      <div
        class="icon"
      >
        <span
          class="container size-20 asContainer shape-round"
          data-qa="Icon"
        >
          <svg
            data-qa="Menu"
            fill="none"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M4 5h12M4 10h12M4 15h12"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.5"
            />
          </svg>
        </span>
      </div>
      <div
        class="container direction-vertical align-start"
        data-qa="Space"
      >
        <div
          class="text"
        >
          Item 1
        </div>
      </div>
    </div>
    <div
      class="itemBase item container direction-horizontal align-center"
      data-qa="Space"
      style="column-gap: 12px; row-gap: 12px;"
    >
      <div
        class="icon"
      >
        <span
          class="container size-20 asContainer shape-round"
          data-qa="Icon"
        >
          <svg
            data-qa="Menu"
            fill="none"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M4 5h12M4 10h12M4 15h12"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.5"
            />
          </svg>
        </span>
      </div>
      <div
        class="container direction-vertical align-start"
        data-qa="Space"
      >
        <div
          class="text"
        >
          Item 2
        </div>
      </div>
    </div>
    <div
      class="itemBase item disabled container direction-horizontal align-center"
      data-qa="Space"
      style="column-gap: 12px; row-gap: 12px;"
    >
      <div
        class="icon disabled"
      >
        <span
          class="container size-20 asContainer shape-round"
          data-qa="Icon"
        >
          <svg
            data-qa="Menu"
            fill="none"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M4 5h12M4 10h12M4 15h12"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.5"
            />
          </svg>
        </span>
      </div>
      <div
        class="container direction-vertical align-start"
        data-qa="Space"
      >
        <div
          class="text"
        >
          Item 3
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Menu should render correctly items with value prop 1`] = `
<div
  class="container container direction-vertical"
  data-qa="Menu"
>
  <div
    class="itemBase item container direction-horizontal align-center"
    data-qa="Space"
    style="column-gap: 12px; row-gap: 12px;"
  >
    <div
      class="container direction-vertical align-start"
      data-qa="Space"
    >
      <div
        class="text"
      >
        Item 1
      </div>
    </div>
    <div
      class="control"
    >
      <label
        class="container readOnly"
        data-qa="Checkbox"
      >
        <input
          class="input"
          type="checkbox"
          value="Value 1"
        />
        <div
          class="control"
        />
      </label>
    </div>
  </div>
  <div
    class="itemBase item container direction-horizontal align-center"
    data-qa="Space"
    style="column-gap: 12px; row-gap: 12px;"
  >
    <div
      class="container direction-vertical align-start"
      data-qa="Space"
    >
      <div
        class="text"
      >
        Item 2
      </div>
    </div>
    <div
      class="control"
    >
      <label
        class="container readOnly"
        data-qa="Checkbox"
      >
        <input
          class="input"
          type="checkbox"
          value="Value 2"
        />
        <div
          class="control"
        />
      </label>
    </div>
  </div>
  <div
    class="itemBase item container direction-horizontal align-center"
    data-qa="Space"
    style="column-gap: 12px; row-gap: 12px;"
  >
    <div
      class="container direction-vertical align-start"
      data-qa="Space"
    >
      <div
        class="text"
      >
        Item 3
      </div>
    </div>
    <div
      class="control"
    >
      <label
        class="container readOnly"
        data-qa="Checkbox"
      >
        <input
          class="input"
          type="checkbox"
          value=""
        />
        <div
          class="control"
        />
      </label>
    </div>
  </div>
</div>
`;

exports[`Menu should render correctly with attributes 1`] = `
<div
  class="test-class container container direction-vertical"
  data-qa="Menu"
  id="test-id"
/>
`;

exports[`Menu should render correctly with items 1`] = `
<div
  class="container container direction-vertical"
  data-qa="Menu"
>
  <div
    class="itemBase item container direction-horizontal align-center"
    data-qa="Space"
    style="column-gap: 12px; row-gap: 12px;"
  >
    <div
      class="container direction-vertical align-start"
      data-qa="Space"
    >
      <div
        class="text"
      >
        Item 1
      </div>
    </div>
  </div>
  <div
    class="itemBase item container direction-horizontal align-center"
    data-qa="Space"
    style="column-gap: 12px; row-gap: 12px;"
  >
    <div
      class="container direction-vertical align-start"
      data-qa="Space"
    >
      <div
        class="text"
      >
        Item 2
      </div>
    </div>
  </div>
  <div
    class="itemBase item container direction-horizontal align-center"
    data-qa="Space"
    style="column-gap: 12px; row-gap: 12px;"
  >
    <div
      class="container direction-vertical align-start"
      data-qa="Space"
    >
      <div
        class="text"
      >
        Item 3
      </div>
    </div>
  </div>
</div>
`;

exports[`Menu should render correctly with no props 1`] = `
<div
  class="container container direction-vertical"
  data-qa="Menu"
/>
`;
